# django_pwa_test

./: .gitignore  .gitmodules  Pipfile  manage.py  pyproject.toml
django_pwa_test/: settings.py  urls.py  wsgi.py
pwa_1/: admin.py  apps.py  models.py  urls.py
pwa_1/migrations/: 0001_initial.py
pwa_1/static/pwa_1/: react.jsx
pwa_1/templates/: home.html
templates/: home.html
