[tool.poetry]
name = "django_pwa_test"
version = "0.1"
license = "Public Domain"
authors = []
description = "django pwa test utility"


[tool.poetry.dependencies]
python = ">=3.5"

django = ">=2"
django-pwa = "*"
django-pwa-batteries = {git = "https://github.com/devkral/django-pwa-batteries.git"}
django-extensions = "*"
werkzeug = "*"
pyopenssl = "*"

[tool.poetry.dev-dependencies]

pypandoc = "*"


[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
